Changes for 1.9

 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.3

 - [ZBX-2303] fixed GET/POST methods in processing web scenario steps. Thanks to Hannu Ylitalo (Sasha)
 - [ZBXNEXT-293] processes now provide more information on why they terminate (asaveljevs)
 - [ZBX-2304] fixed "no permission" error when screen contains simple graphs with web item (Vedmak)
 - [ZBX-2268] denied creation of pie\exploded graphs with more than one sum items (Vedmak)
 - [ZBX-2298] added constant to defines to be able configure default Y axis position: left or right (AM)
 - [ZBX-2174] fixed a small memory leak in SNMP checks (asaveljevs)
 - [ZBX-2300] fixed caching of "Database monitor" items. Thanks to Kirill Fateev (Sasha)
 - [ZBX-2290] fixed screen cells moving (Vedmak)
 - [ZBX-2301] fixed "configure" script with libssh2-1.0.0 library (Sasha)
 - [ZBX-2296] fixed possible heavy loaded server crash when using internal checks (Sasha)
 - [ZBX-2295] added additional units to graphs Y axis (Aly)
 - [ZBX-2285] fixed sending of active items multiple times (asaveljevs,Sasha)
 - [ZBX-2266] fixed server crash when processing malformed calculated items (asaveljevs)
 - [ZBX-1346] use single quotes in example frontend configuration file (Richlv)
 - [ZBX-2274] fixed trigger expression corruption with trigger wizard (AM)
 - [ZBX-2273] add support of macro {TRIGGER.EVENTS.UNACK} for map labels (Vedmak)
 - [ZBX-2279] fixed error when changing graph name case (Vedmak)
 - [ZBX-2252] fixed server crash and infinite looping in telnet checks (asaveljevs)
 - [ZBX-2275] fixed loss of the log-data if Zabbix server is unavailable (Sasha)
 - [DEV-457] improved dashboard favorite selection (Aly)
 - [DEV-457] improvements in dynamic map link indicators form (Aly)
 - [ZBX-2258] fixed applications import (Vedmak)
 - [ZBX-1357] update Brazilian Portuguese translation; thanks to edson (Richlv)